--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>lol</title>
+    
+    <title>Avatar's Legacy</title>
+
+    
 </head>
 <body>
-    <p>lol</p>
+    <p></p>
 </body>
 </html>
