ajout librairie alpineJS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <title>Avatar's Legacy</title>
 
-    
+    <script src="//unpkg.com/alpinejs" defer></script>
 </head>
 <body>
     <p></p>
