création style.css + link dans index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Avatar's Legacy</title>
 
     <script src="//unpkg.com/alpinejs" defer></script>
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
     <p></p>
