déplacement index.html dans fr

--- a/fr/index.html
+++ b/fr/index.html
@@ -7,9 +7,17 @@
     <title>Avatar's Legacy</title>
 
     <script src="//unpkg.com/alpinejs" defer></script>
-    <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-    <p></p>
+    <header>
+
+    </header>
+    <section>
+
+    </section>
+    <footer>
+        
+    </footer>
 </body>
 </html>
