--- a/fr/index.html
+++ b/fr/index.html
@@ -11,7 +11,11 @@
 </head>
 <body>
     <header>
-
+        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site">
+        <h1>
+            Avatar's Legacy
+        </h1>
+        <img src="/public/icones/header/BytesizeMenu.svg" alt="">
     </header>
     <section>
 
