changements noms img + ajout premières images et premiers contenus textuels page d'accueil

--- a/fr/index.html
+++ b/fr/index.html
@@ -12,13 +12,17 @@
 <body>
     <header>
         <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site">
-        <h1>
+        <h2>
             Avatar's Legacy
-        </h1>
+        </h2>
         <img src="/public/icones/header/BytesizeMenu.svg" alt="">
     </header>
     <section>
-        
+        <img src="/public/img/jake et neytiri proches.webp" alt="">
+        <img src="/public/img/Rectangle 4.webp" alt="">*
+        <h1>AVATAR</h1>
+        <hr>
+        <p>"Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</p>
     </section>
     <footer>
         
