ajout deuxième section page d'accueil html

--- a/fr/index.html
+++ b/fr/index.html
@@ -19,10 +19,18 @@
     </header>
     <section>
         <img src="/public/img/jake et neytiri proches.webp" alt="">
-        <img src="/public/img/Rectangle 4.webp" alt="">*
+        <img src="/public/img/Rectangle 4.webp" alt="">
         <h1>AVATAR</h1>
         <hr>
         <p>"Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</p>
+        <img src="/public/icones/BytesizeChevronBottom.svg" alt="">
+    </section>
+    <section>
+        <img src="/public/img/image article 1 page d'accueil.webp" alt="">
+        <p>Une réplique marquante</p>
+        <p>Plongez dans les profondeurs du film "Avatar" de James Cameron et explorez une réplique qui éveille les consciences, remettant en question l'avidité, l'impérialisme et notre relation avec la nature.</p>
+        <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        <hr>
     </section>
     <footer>
         
