ajout troisième section page d'accueil html

--- a/fr/index.html
+++ b/fr/index.html
@@ -32,6 +32,13 @@
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
         <hr>
     </section>
+    <section>
+        <img src="/public/img/image article 2 page d'accueil.webp" alt="">
+        <p>Un film culte</p>
+        <p>Plongez dans l'univers extraordinaire de Pandora, explorez le conflit entre les humains et les Na'vi, et immergez-vous dans un message écologique puissant. Découvrez comment "Avatar" a redéfini le cinéma.</p>
+        <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        <hr>
+    </section>
     <footer>
         
     </footer>
