ajout section 4 page d'accueil html

--- a/fr/index.html
+++ b/fr/index.html
@@ -39,6 +39,13 @@
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
         <hr>
     </section>
+    <section>
+        <img src="/public/img/image article 3 page d'accueil.webp" alt="">
+        <p>Un réalisateur visionnaire</p>
+        <p>Découvrez le parcours exceptionnel de James Cameron, un maître de la science-fiction et un défenseur de l'exploration des fonds marins. Plongez dans l'impact révolutionnaire de "Avatar" sur l'industrie cinématographique.</p>
+        <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        <hr>
+    </section>
     <footer>
         
     </footer>
