ajout section 6 page d'accueil html

--- a/fr/index.html
+++ b/fr/index.html
@@ -53,6 +53,13 @@
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
         <hr>
     </section>
+    <section>
+        <img src="/public/img/image article 5 page d'accueil.webp" alt="">
+        <p>Un livre captivant</p>
+        <p>Découvrez comment "Avatar: Le Livre" vous transporte dans l'univers extraordinaire du film de James Cameron, offrant des détails fascinants sur l’univers d’Avatar et une opportunité de vivre cette aventure immersive d'une toute nouvelle manière.</p>
+        <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        <hr>
+    </section>
     <footer>
         
     </footer>
