ajout footer html page d'accueil

--- a/fr/index.html
+++ b/fr/index.html
@@ -58,10 +58,17 @@
         <p>Un livre captivant</p>
         <p>Découvrez comment "Avatar: Le Livre" vous transporte dans l'univers extraordinaire du film de James Cameron, offrant des détails fascinants sur l’univers d’Avatar et une opportunité de vivre cette aventure immersive d'une toute nouvelle manière.</p>
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
-        <hr>
     </section>
     <footer>
-        
+        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="">
+        <p>RÉSEAUX SOCIAUX</p>
+        <img src="/public/icones/BxlInstagram (1).svg" alt="">
+        <img src="/public/icones/BxlFacebookCircle (1).svg" alt="">
+        <img src="/public/icones/icons8-twitterx (1).svg" alt=""> 
+        <img src="/public/icones/BxlSpotify.svg" alt="">
+        <hr>
+        <p>Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <img src="/public/icones/logo MMI.svg" alt="">
     </footer>
 </body>
 </html>
