--- a/fr/index.html
+++ b/fr/index.html
@@ -22,46 +22,46 @@
         <img src="/public/img/Rectangle 4.webp" alt="">
         <h1>AVATAR</h1>
         <hr>
-        <p>"Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</p>
+        <cite>"Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</cite>
         <img src="/public/icones/BytesizeChevronBottom.svg" alt="">
     </section>
     <section>
         <img src="/public/img/image article 1 page d'accueil.webp" alt="">
-        <p>Une réplique marquante</p>
+        <h3>Une réplique marquante</h3>
         <p>Plongez dans les profondeurs du film "Avatar" de James Cameron et explorez une réplique qui éveille les consciences, remettant en question l'avidité, l'impérialisme et notre relation avec la nature.</p>
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
         <hr>
     </section>
     <section>
         <img src="/public/img/image article 2 page d'accueil.webp" alt="">
-        <p>Un film culte</p>
+        <h3>Un film culte</h3>
         <p>Plongez dans l'univers extraordinaire de Pandora, explorez le conflit entre les humains et les Na'vi, et immergez-vous dans un message écologique puissant. Découvrez comment "Avatar" a redéfini le cinéma.</p>
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
         <hr>
     </section>
     <section>
         <img src="/public/img/image article 3 page d'accueil.webp" alt="">
-        <p>Un réalisateur visionnaire</p>
+        <h3>Un réalisateur visionnaire</h3>
         <p>Découvrez le parcours exceptionnel de James Cameron, un maître de la science-fiction et un défenseur de l'exploration des fonds marins. Plongez dans l'impact révolutionnaire de "Avatar" sur l'industrie cinématographique.</p>
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
         <hr>
     </section>
     <section>
         <img src="/public/img/image article 4 page d'accueil.webp" alt="">
-        <p>Une bande son envoûtante</p>
+        <h3>Une bande son envoûtante</h3>
         <p>Découvrez comment la bande-son de "Avatar" transporte les spectateurs dans un monde d'émotions intenses. Explorez le morceau magique "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" de James Horner, qui est un voyage musical envoûtant dans l'univers de Pandora.</p>
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
         <hr>
     </section>
     <section>
         <img src="/public/img/image article 5 page d'accueil.webp" alt="">
-        <p>Un livre captivant</p>
+        <h3>Un livre captivant</h3>
         <p>Découvrez comment "Avatar: Le Livre" vous transporte dans l'univers extraordinaire du film de James Cameron, offrant des détails fascinants sur l’univers d’Avatar et une opportunité de vivre cette aventure immersive d'une toute nouvelle manière.</p>
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
     </section>
     <footer>
         <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="">
-        <p>RÉSEAUX SOCIAUX</p>
+        <h4>RÉSEAUX SOCIAUX</h4>
         <img src="/public/icones/BxlInstagram (1).svg" alt="">
         <img src="/public/icones/BxlFacebookCircle (1).svg" alt="">
         <img src="/public/icones/icons8-twitterx (1).svg" alt=""> 
