ajout html page article 1

--- a/fr/index.html
+++ b/fr/index.html
@@ -18,8 +18,7 @@
         <img src="/public/icones/header/BytesizeMenu.svg" alt="">
     </header>
     <section>
-        <img src="/public/img/jake et neytiri proches.webp" alt="">
-        <img src="/public/img/Rectangle 4.webp" alt="">
+        <img src="/public/img/jake et neytiri proches.webp" alt="">-
         <h1>AVATAR</h1>
         <hr>
         <cite>"Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</cite>
@@ -29,7 +28,9 @@
         <img src="/public/img/image article 1 page d'accueil.webp" alt="">
         <h3>Une réplique marquante</h3>
         <p>Plongez dans les profondeurs du film "Avatar" de James Cameron et explorez une réplique qui éveille les consciences, remettant en question l'avidité, l'impérialisme et notre relation avec la nature.</p>
+        <a href="/fr/page article 1.html">
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        </a>
         <hr>
     </section>
     <section>
