--- a/fr/page article 1.html
+++ b/fr/page article 1.html
@@ -38,5 +38,16 @@
         <p>Cette réplique représente bien l’histoire du film, qui est une métaphore de la vie réelle. Elle nous montre que la convoitise et l'avidité peuvent conduire à des conflits dévastateurs. Elle nous fait comprendre qu’il ne faut pas détruire la nature et d'autres peuples. Pour nous faire prendre conscience et ne pas reproduire la même chose. Au lieu de considérer les ressources comme des biens à exploiter sans scrupules, nous devrions chercher des moyens de coopérer, de préserver la planète et de respecter les droits des peuples autochtones.</p>
         <p>Elle invite donc à se mettre à la place de ceux qui sont persécutés pour prendre conscience de la cruauté de certains actes, autant pour les personnes concernées que pour l’environnement.</p>  
     </section>
+    <footer>
+        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="">
+        <h4>RÉSEAUX SOCIAUX</h4>
+        <img src="/public/icones/BxlInstagram (1).svg" alt="">
+        <img src="/public/icones/BxlFacebookCircle (1).svg" alt="">
+        <img src="/public/icones/icons8-twitterx (1).svg" alt=""> 
+        <img src="/public/icones/BxlSpotify.svg" alt="">
+        <hr>
+        <p>Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <img src="/public/icones/logo MMI.svg" alt="">
+    </footer>
 </body>
 </html>
