ajout header html  page article 2

--- a/fr/page article 2.html
+++ b/fr/page article 2.html
@@ -6,6 +6,12 @@
     <title>Un réalisateur visionnaire</title>
 </head>
 <body>
-    
+    <header>
+        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site">
+        <h2>
+            Avatar's Legacy
+        </h2>
+        <img src="/public/icones/header/BytesizeMenu.svg" alt="">
+    </header>
 </body>
 </html>
