--- a/fr/index.html
+++ b/fr/index.html
@@ -37,7 +37,9 @@
         <img src="/public/img/image article 2 page d'accueil.webp" alt="">
         <h3>Un film culte</h3>
         <p>Plongez dans l'univers extraordinaire de Pandora, explorez le conflit entre les humains et les Na'vi, et immergez-vous dans un message écologique puissant. Découvrez comment "Avatar" a redéfini le cinéma.</p>
+        <a href="/fr/page article 2.html">
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        </a>
         <hr>
     </section>
     <section>
