--- a/fr/page article 2.html
+++ b/fr/page article 2.html
@@ -33,5 +33,15 @@
         <img src="/public/img/bande son img.webp" alt="">
         <p>Mais le succès d’Avatar n’est pas seulement lié à son contenu. Le film a battu des records au box-office, devenant le film le plus rentable de tous les temps jusqu'à cette date. Cette réussite commerciale a également conduit à la création d'une franchise étendue, avec plusieurs suites prévues pour les années à venir. Avatar est un film qui restera dans l’histoire du cinéma.</p>
     </section>
+    <section>
+        <h4>
+            Bande annonce du film
+        </h4>
+        <a href="https://youtu.be/O1CzgULNRGs?si=e1vxvkJbmTzKspTX">
+        <img src="/public/img/image bande annonce.webp" alt="">
+        <img src="/public/icones/TdesignCaretRightSmall.svg" alt="">
+        </a>
+        <h4>AUTRES FILMS</h4>
+    </section>
 </body>
 </html>
