--- a/fr/page article 2.html
+++ b/fr/page article 2.html
@@ -43,5 +43,16 @@
         </a>
         <h4>AUTRES FILMS</h4>
     </section>
+    <footer>   
+        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="">
+        <h4>RÉSEAUX SOCIAUX</h4>
+        <img src="/public/icones/BxlInstagram (1).svg" alt="">
+        <img src="/public/icones/BxlFacebookCircle (1).svg" alt="">
+        <img src="/public/icones/icons8-twitterx (1).svg" alt=""> 
+        <img src="/public/icones/BxlSpotify.svg" alt="">
+        <hr>
+        <p>Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <img src="/public/icones/logo MMI.svg" alt="">
+    </footer>
 </body>
 </html>
