--- a/fr/page article 2.html
+++ b/fr/page article 2.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <title>Un film culte</title>
+
+    <script src="//unpkg.com/alpinejs" defer></script>
+    <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
     <header>
