ajout header page article 3 html

--- a/fr/index.html
+++ b/fr/index.html
@@ -46,7 +46,9 @@
         <img src="/public/img/image article 3 page d'accueil.webp" alt="">
         <h3>Un réalisateur visionnaire</h3>
         <p>Découvrez le parcours exceptionnel de James Cameron, un maître de la science-fiction et un défenseur de l'exploration des fonds marins. Plongez dans l'impact révolutionnaire de "Avatar" sur l'industrie cinématographique.</p>
+        <a href="/fr/page article 3.html">
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        </a>
         <hr>
     </section>
     <section>
