ajout section page article 3 html

--- a/fr/page article 3.html
+++ b/fr/page article 3.html
@@ -17,5 +17,23 @@
         </h2>
         <img src="/public/icones/header/BytesizeMenu.svg" alt="">
     </header>
+    <section>
+        <h2>Un réalisateur visionnaire</h2>
+        <hr>
+        <img src="/public/img/image article 3 page d'accueil.webp" alt="">
+        <h4>James Cameron</h4>
+        <p>Découvrez le parcours exceptionnel de James Cameron, un maître de la science-fiction et un défenseur de l'exploration des fonds marins. Plongez dans l'impact révolutionnaire de "Avatar" sur l'industrie cinématographique.</p>
+        <p>James Cameron est un réalisateur, scénariste et producteur de renom.C’est un réalisateur qui a révolutionné l'industrie cinématographique et qui est très renommé dans ce milieu. Né le 16 août 1954 au Canada, Cameron a acquis une renommée mondiale grâce à son talent pour la réalisation de films qui repoussent les limites de la technologie cinématographique.</p>
+        <img src="/public/img/awards.webp" alt="">
+        <p>Ce qui différencie James Cameron, c’est qu’il est spécialisé dans les films de science-fiction. En 1984, il a réalisé “The Terminator”,un film de science-fiction qui a lancé sa carrière et établi Arnold Schwarzenegger comme une icône du cinéma. Il a ensuite dirigé "Aliens" en 1986, qui est la suite du film original de Ridley Scott. Mais c'est avec "Avatar" en 2009 qu'il a marqué l'histoire du cinéma.</p>
+        <img src="/public/img/avatar img.webp" alt="">
+        <p>"Avatar" a révolutionné l'utilisation de la technologie 3D au cinéma, créant un monde extraordinaire sur la planète Pandora. Le film a battu des records au box-office et a remporté plusieurs Oscars, en révolutionnant la réalisation cinématographique et la science-fiction.</p>
+        <img src="/public/img/pandora ile.webp" alt="">
+        <p>En plus du cinéma de science-fiction, James Cameron a été l'un des réalisateurs les plus engagés dans la réalisation de documentaires liés à l'exploration des fonds marins. Son film "The Abyss" en 1989 et "Titanic" en 1997 par exemple montre son intérêt pour les océans. Il a même effectué des plongées en eau profonde et a réalisé des documentaires sur ses explorations, contribuant ainsi à sensibiliser le public à l'importance de la préservation des océans. Qui est d’ailleurs un thème très important dans la suite d’Avatar, le film “Avatar 2 : La voie de l’eau”.</p>
+        <img src="/public/img/creature eau.webp" alt="">
+        <p>James Cameron est détermination et perfectionniste. Mais il est également tenace concernant la réalisation de ses projets, notamment "Titanic" et "Avatar," qui ont été des entreprises massives avec beaucoup de défis techniques.</p>
+        <p>Au fil des années, James Cameron a prouvé sa capacité à raconter des histoires puissantes tout en tirant parti des dernières avancées technologiques pour donner vie à ses films. </p>
+        <p>James Cameron est un réalisateur visionnaire et un pilier du cinéma et va peut-être encore plus prouver sa valeur avec les suites des films avatar.</p>
+    </section>
 </body>
 </html>
