ajout section page article 4 html

--- a/fr/page article 4.html
+++ b/fr/page article 4.html
@@ -17,5 +17,24 @@
         </h2>
         <img src="/public/icones/header/BytesizeMenu.svg" alt="">
     </header>
+    <section>
+        <h2>Une bande son envoûtante</h2>
+        <hr>
+        <img src="/public/img/image article 4 page d'accueil.webp" alt="">
+        <h4>Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri</h4>
+        <p>Découvrez comment la bande-son de "Avatar" transporte les spectateurs dans un monde d'émotions intenses. Explorez le morceau magique "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" de James Horner, qui est un voyage musical envoûtant dans l'univers de Pandora.</p>
+        <p>"Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" - Un Voyage Musical dans Avatar</p>
+        <p>L'épopée de James Cameron en 2009, "Avatar", a captivé les spectateurs avec ses images à couper le souffle et sa technologie 3D révolutionnaire, mais il a également laissé une empreinte indélébile grâce à sa bande-son envoûtante. L'un des morceaux les plus marquants est "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri", composé par James Horner.</p>
+        <img src="/public/img/bande son img.webp" alt="">
+        <p>La bande-son fait partie intégrante de la narration du film, elle permet de renforcer le lien émotionnel du public avec les personnages et le monde époustouflant de Pandora. "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" se distingue comme un chef-d'œuvre musical au sein de la partition du film.</p>
+        <p>Le morceau accompagne une scène cruciale du film lorsque Jake Sully, le protagoniste, est initié à la culture Na'vi par Neytiri, l'héroïne féminine. Alors que la musique s'intensifie, elle reflète la transformation de Jake, passant d'étranger à véritable membre de la tribu Na'vi, symbolisant sa connexion avec Neytiri, tant sur le plan émotionnel que spirituel.</p>
+        <img src="/public/img/j et n gros plan.webp" alt="">
+        <p>Les voix et l'utilisation d'instruments traditionnels évoquent un sentiment de beauté surnaturel, reflétant parfaitement le monde enchanteur et harmonieux de Pandora.</p>
+        <img src="/public/img/j et n regardent la foret.webp" alt="">
+        <p>La capacité de la composition à transmettre un sentiment d'appartenance et d'unité est l'un de ses aspects les plus remarquables de cette musique. Elle met en avant le voyage de Jake, son acceptation par les Na'vi et son amour croissant pour Neytiri. La musique transcende les barrières linguistiques et culturelles, permettant aux publics du monde entier de se connecter avec les personnages et les thèmes du film de manière profonde et émotionnelle.</p>
+        <img src="/public/img/j et n grotte.webp" alt="">
+        <p>"Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" est également devenu un des morceaux favoris des fans, souvent interprété lors de concerts symphoniques en direct et célébré pour sa beauté intemporelle. Les personnes ayant vu le film se souviennent pendant bien longtemps la mélodie de la musique, ce qui rappelle le pouvoir transformateur de la musique dans la narration cinématographique.</p>
+        <p>En conclusion, la musique d' "Avatar", et en particulier "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri", montre la capacité du film à transporter les spectateurs dans un autre monde et à évoquer des émotions puissantes. La composition de James Horner ajoute une couche supplémentaire de profondeur à la narration, en faisant une part essentielle de l'expérience cinématographique. Cette musique et les musiques d’Avatar en général participent au fait que le film dure dans le temps.</p>
+    </section>
 </body>
 </html>
