--- a/fr/index.html
+++ b/fr/index.html
@@ -55,7 +55,9 @@
         <img src="/public/img/image article 4 page d'accueil.webp" alt="">
         <h3>Une bande son envoûtante</h3>
         <p>Découvrez comment la bande-son de "Avatar" transporte les spectateurs dans un monde d'émotions intenses. Explorez le morceau magique "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" de James Horner, qui est un voyage musical envoûtant dans l'univers de Pandora.</p>
+        <a href="/fr/page article 4.html">
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        </a>
         <hr>
     </section>
     <section>
