ajout page article 5

--- a/fr/index.html
+++ b/fr/index.html
@@ -64,7 +64,9 @@
         <img src="/public/img/image article 5 page d'accueil.webp" alt="">
         <h3>Un livre captivant</h3>
         <p>Découvrez comment "Avatar: Le Livre" vous transporte dans l'univers extraordinaire du film de James Cameron, offrant des détails fascinants sur l’univers d’Avatar et une opportunité de vivre cette aventure immersive d'une toute nouvelle manière.</p>
+        <a href="/fr/page article 5.html">
         <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        </a>
     </section>
     <footer>
         <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="">
