ajout header html page article 5

--- a/fr/page article 5.html
+++ b/fr/page article 5.html
@@ -10,6 +10,13 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
+    <header>
+        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site">
+        <h2>
+            Avatar's Legacy
+        </h2>
+        <img src="/public/icones/header/BytesizeMenu.svg" alt="">
+    </header>
     
 </body>
 </html>
