ajout première section page article 5 html

--- a/fr/page article 5.html
+++ b/fr/page article 5.html
@@ -17,6 +17,25 @@
         </h2>
         <img src="/public/icones/header/BytesizeMenu.svg" alt="">
     </header>
-    
+    <section>
+        <h2>Un livre captivant</h2>
+        <hr>
+        <img src="/public/img/image article 5 page d'accueil.webp" alt="">
+        <h4>Avatar : Le livre</h4>
+        <p>Découvrez comment Avatar: Le roman du film vous transporte dans l'univers extraordinaire du film de James Cameron, offrant des détails fascinants sur l’univers d’Avatar et une opportunité de vivre cette aventure immersive d'une toute nouvelle manière.</p>
+        <p>Avatar : Le roman du film <br>
+        Les fans de l'univers captivant Avatar, le film épique de science-fiction de James Cameron, peuvent désormais se plonger encore plus profondément dans cette aventure extraordinaire grâce à Avatar: Le roman du film. Cette extension du monde cinématographique offre un regard détaillé sur Pandora, ses habitants, et les histoires qui se cachent derrière cette planète extraordinaire.</p>
+        <img src="/public/img/bande son.webp" alt="">
+        <p>L'ouvrage, créé en collaboration avec James Cameron et l'écrivain Steven Charles Gould, transporte les lecteurs dans les profondeurs de la jungle luxuriante de Pandora, où les Na'vi vivent en harmonie avec leur environnement. Le livre explore en détail la faune et la flore de Pandora, permettant aux lecteurs de découvrir de nouvelles espèces étonnantes et d'en apprendre davantage sur les créatures iconiques du film, comme les banshees et les thanatos.</p>
+        <img src="/public/img/animaux forêt.webp" alt="">
+        <p>Mais le livre ne se limite pas à une simple exploration des merveilles naturelles de Pandora. Il plonge également dans l'histoire des Na'vi, leurs traditions, leur culture, et leur relation avec les humains. Les lecteurs pourront découvrir comment les Na'vi vivent en harmonie avec Eywa, l'entité divine de Pandora, et comment ils se sont adaptés pour résister aux menaces extérieures.</p>
+        <img src="/public/img/arbre shinju.webp" alt="">
+        <p>L'un des aspects les plus attrayants du livre est son exploration des personnages principaux, notamment Neytiri, Jake Sully et le colonel Quaritch. Les lecteurs pourront en apprendre davantage sur leurs origines, leurs motivations et leurs rôles dans l'histoire globale de Pandora. Les détails supplémentaires sur la relation entre Neytiri et Jake offrent un aperçu plus profond de leur lien spécial.</p>
+        <img src="/public/img/passion pollen.webp" alt="">
+        <p>De plus, le livre plonge dans les coulisses du film, révélant des informations sur le processus de création, les défis technologiques, et l'engagement des acteurs et de l'équipe de production. Les fans du film trouveront fascinant de découvrir comment la vision de James Cameron s'est concrétisée sur grand écran. Par exemple comme on voit sur l’image ci-dessous, Avatar est le deuxième film à utiliser le motiondesign.</p>
+        <img src="/public/img/tech.webp" alt="">
+        <p>L'ouvrage offre une opportunité passionnante d'étendre l'expérience Avatar au-delà du cinéma, permettant aux fans de s'immerger davantage dans l'univers de Pandora et d'approfondir leur compréhension de cet extraordinaire monde de science-fiction.</p>
+        <p>En conclusion, Avatar: Le roman du film est un incontournable pour les fans du film. Il offre un voyage fascinant dans l'univers de Pandora, enrichissant la compréhension des personnages, de la culture Na'vi, et de la planète elle-même. C'est une extension épique de l'histoire cinématographique qui ravira les passionnés de Avatar et les plongera plus profondément dans cette aventure immersive. Mais c’est également une autre manière que le film pour découvrir Avatar pour ceux qui ne l’ont pas vu.</p>
+    </section>
 </body>
 </html>
