ajout footer html page article 5

--- a/fr/page article 5.html
+++ b/fr/page article 5.html
@@ -37,5 +37,18 @@
         <p>L'ouvrage offre une opportunité passionnante d'étendre l'expérience Avatar au-delà du cinéma, permettant aux fans de s'immerger davantage dans l'univers de Pandora et d'approfondir leur compréhension de cet extraordinaire monde de science-fiction.</p>
         <p>En conclusion, Avatar: Le roman du film est un incontournable pour les fans du film. Il offre un voyage fascinant dans l'univers de Pandora, enrichissant la compréhension des personnages, de la culture Na'vi, et de la planète elle-même. C'est une extension épique de l'histoire cinématographique qui ravira les passionnés de Avatar et les plongera plus profondément dans cette aventure immersive. Mais c’est également une autre manière que le film pour découvrir Avatar pour ceux qui ne l’ont pas vu.</p>
     </section>
+    <section>
+    </section>
+    <footer>
+        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="">
+        <h4>RÉSEAUX SOCIAUX</h4>
+        <img src="/public/icones/BxlInstagram (1).svg" alt="">
+        <img src="/public/icones/BxlFacebookCircle (1).svg" alt="">
+        <img src="/public/icones/icons8-twitterx (1).svg" alt=""> 
+        <img src="/public/icones/BxlSpotify.svg" alt="">
+        <hr>
+        <p>Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <img src="/public/icones/logo MMI.svg" alt="">
+    </footer>
 </body>
 </html>
