ajout section 1 page glossaire html

--- a/fr/page glossaire.html
+++ b/fr/page glossaire.html
@@ -17,5 +17,11 @@
         </h2>
         <img src="/public/icones/header/BytesizeMenu.svg" alt="">
     </header>
+    <section>
+        <h2>Glossaire</h2>
+        <hr>
+        <p>Pandora : Pandora est l'exo-lune de fiction où se déroule le film Avatar de James Cameron. C'est un satellite de Polyphème, une géante gazeuse de couleur bleue. L’air y est irrespirable pour les humains.</p>
+        <img src="/public/img/pandora ile.webp" alt="">
+    </section>
 </body>
 </html>
