ajout section 2 page glossaire html

--- a/fr/page glossaire.html
+++ b/fr/page glossaire.html
@@ -17,11 +17,15 @@
         </h2>
         <img src="/public/icones/header/BytesizeMenu.svg" alt="">
     </header>
-    <section>
-        <h2>Glossaire</h2>
+    <h2>Glossaire</h2>
         <hr>
+    <section>
         <p>Pandora : Pandora est l'exo-lune de fiction où se déroule le film Avatar de James Cameron. C'est un satellite de Polyphème, une géante gazeuse de couleur bleue. L’air y est irrespirable pour les humains.</p>
         <img src="/public/img/pandora ile.webp" alt="">
+    </section>
+    <section>
+        <p>Na'vi : Le na'vi est une langue construite inventée pour la franchise cinématographique Avatar de James Cameron. Il s'agit de la langue des Na'vi, créatures humanoïdes indigènes de la lune Pandora.</p>
+        <img src="/public/img/rassemblement.webp" alt="">
     </section>
 </body>
 </html>
