ajout section 3 page glossaire html

--- a/fr/page glossaire.html
+++ b/fr/page glossaire.html
@@ -27,5 +27,9 @@
         <p>Na'vi : Le na'vi est une langue construite inventée pour la franchise cinématographique Avatar de James Cameron. Il s'agit de la langue des Na'vi, créatures humanoïdes indigènes de la lune Pandora.</p>
         <img src="/public/img/rassemblement.webp" alt="">
     </section>
+    <section>
+        <p>Banshee : Le Banshee (Nom Na'vi : Ikran) est une créature de Pandora. C'est un grand volatile, que les Na'vis ont pu dompter pour se déplacer dans les airs. Il en existe deux sortes : ceux des montagnes et ceux des forêts.</p>
+        <img src="/public/img/dragon.webp" alt="">
+    </section>
 </body>
 </html>
