ajout section 4 page glossaire html

--- a/fr/page glossaire.html
+++ b/fr/page glossaire.html
@@ -31,5 +31,9 @@
         <p>Banshee : Le Banshee (Nom Na'vi : Ikran) est une créature de Pandora. C'est un grand volatile, que les Na'vis ont pu dompter pour se déplacer dans les airs. Il en existe deux sortes : ceux des montagnes et ceux des forêts.</p>
         <img src="/public/img/dragon.webp" alt="">
     </section>
+    <section>
+        <p>Thanatos : Le Thanator est une créature de Pandora, peut-être la plus dangereuse. Ce prédateur terrestre a des airs de panthère terrienne, mais elle est une véritable menace pour toutes les autres espèces.</p>
+        <img src="/public/img/tricératops.webp" alt="">
+    </section>
 </body>
 </html>
