ajout section 5 page glossaire html

--- a/fr/page glossaire.html
+++ b/fr/page glossaire.html
@@ -35,5 +35,9 @@
         <p>Thanatos : Le Thanator est une créature de Pandora, peut-être la plus dangereuse. Ce prédateur terrestre a des airs de panthère terrienne, mais elle est une véritable menace pour toutes les autres espèces.</p>
         <img src="/public/img/tricératops.webp" alt="">
     </section>
+    <section>
+        <p>Eywa : Dans les films Avatar, Eywa est la divinité du peuple Na'vi. Selon les croyances de ce peuple, il s'agit d'une force protectrice et vivante, un gardien qui maintient l'équilibre sur Pandora.</p>
+        <img src="/public/img/arbre shinju.webp" alt="">
+    </section>
 </body>
 </html>
