ajout footer html page glossaire

--- a/fr/page glossaire.html
+++ b/fr/page glossaire.html
@@ -39,5 +39,16 @@
         <p>Eywa : Dans les films Avatar, Eywa est la divinité du peuple Na'vi. Selon les croyances de ce peuple, il s'agit d'une force protectrice et vivante, un gardien qui maintient l'équilibre sur Pandora.</p>
         <img src="/public/img/arbre shinju.webp" alt="">
     </section>
+    <footer>
+        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="">
+        <h4>RÉSEAUX SOCIAUX</h4>
+        <img src="/public/icones/BxlInstagram (1).svg" alt="">
+        <img src="/public/icones/BxlFacebookCircle (1).svg" alt="">
+        <img src="/public/icones/icons8-twitterx (1).svg" alt=""> 
+        <img src="/public/icones/BxlSpotify.svg" alt="">
+        <hr>
+        <p>Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <img src="/public/icones/logo MMI.svg" alt="">
+    </footer>
 </body>
 </html>
