ajout section page a propos html

--- a/fr/page à propos.html
+++ b/fr/page à propos.html
@@ -17,5 +17,11 @@
         </h2>
         <img src="/public/icones/header/BytesizeMenu.svg" alt="">
     </header>
+    <section>
+        <img src="/public/img/Avatar.webp" alt="">
+        <p>Je suis Gabriel Moreau, actuellement étudiant au BUT MMI de Montbéliard en première année. </p>
+        <p>Ce projet à été créé dans le cadre d’un exercice pédagogique au département MMI de Montbéliard.</p>
+        <p>J’ai créé ce site sur Avatar car je suis un fan de ce film et je voulais partager cet univers à d’autres personnes. Je voulais créer un site pour faire découvrir cet univers aux personnes qui n’ont jamais vu le film mais également rappeler de bons souvenirs à ceux qui ont vu le site ou leur faire découvrir de nouvelles choses sur cet univers.</p>
+    </section>
 </body>
 </html>
