ajout footer html page a propos

--- a/fr/page à propos.html
+++ b/fr/page à propos.html
@@ -23,5 +23,16 @@
         <p>Ce projet à été créé dans le cadre d’un exercice pédagogique au département MMI de Montbéliard.</p>
         <p>J’ai créé ce site sur Avatar car je suis un fan de ce film et je voulais partager cet univers à d’autres personnes. Je voulais créer un site pour faire découvrir cet univers aux personnes qui n’ont jamais vu le film mais également rappeler de bons souvenirs à ceux qui ont vu le site ou leur faire découvrir de nouvelles choses sur cet univers.</p>
     </section>
+    <footer>
+        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="">
+        <h4>RÉSEAUX SOCIAUX</h4>
+        <img src="/public/icones/BxlInstagram (1).svg" alt="">
+        <img src="/public/icones/BxlFacebookCircle (1).svg" alt="">
+        <img src="/public/icones/icons8-twitterx (1).svg" alt=""> 
+        <img src="/public/icones/BxlSpotify.svg" alt="">
+        <hr>
+        <p>Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <img src="/public/icones/logo MMI.svg" alt="">
+    </footer>
 </body>
 </html>
