ajout section 1 page autres projets

--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -17,5 +17,51 @@
         </h2>
         <img src="/public/icones/header/BytesizeMenu.svg" alt="">
     </header>
+    <h2>Autres projets</h2>
+        <hr>
+    <section>
+        <img src="/public/img/Asterix et Obelix mission Chleopatre 1.webp" alt="">
+        <p>"Mission Cléopâtre" réalisé par Chloé Vincent sur le film “Astérix et Obélix: mission Cléopâtre”</p>
+    </section>
+    <section>
+        <img src="" alt="">
+        <p></p>
+    </section>
+    <section>
+        <img src="" alt="">
+        <p></p>
+    </section>
+    <section>
+        <img src="" alt="">
+        <p></p>
+    </section>
+    <section>
+        <img src="" alt="">
+        <p></p>
+    </section>
+    <section>
+        <img src="" alt="">
+        <p></p>
+    </section>
+    <section>
+        <img src="" alt="">
+        <p></p>
+    </section>
+    <section>
+        <img src="" alt="">
+        <p></p>
+    </section>
+    <section>
+        <img src="" alt="">
+        <p></p>
+    </section>
+    <section>
+        <img src="" alt="">
+        <p></p>
+    </section>
+    <section>
+        <img src="" alt="">
+        <p></p>
+    </section>
 </body>
 </html>
