ajout section 2 page autres projets

--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -24,8 +24,8 @@
         <p>"Mission Cléopâtre" réalisé par Chloé Vincent sur le film “Astérix et Obélix: mission Cléopâtre”</p>
     </section>
     <section>
-        <img src="" alt="">
-        <p></p>
+        <img src="/public/img/Kaamelott 1.webp" alt="">
+        <p>"Kaalsifis" réalisé par Maëlle Coquelet sur le film “Kaamelott : Premier Volet”</p>
     </section>
     <section>
         <img src="" alt="">
