ajout section 3 page autres projets

--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -28,8 +28,8 @@
         <p>"Kaalsifis" réalisé par Maëlle Coquelet sur le film “Kaamelott : Premier Volet”</p>
     </section>
     <section>
-        <img src="" alt="">
-        <p></p>
+        <img src="/public/img/Le chateau ambulant 1.webp" alt="">
+        <p>“MysticHowl” réalisé par Anis Amrouche sur le film “Le château ambulant”</p>
     </section>
     <section>
         <img src="" alt="">
