ajout section 4 page autres projets

--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -32,8 +32,8 @@
         <p>“MysticHowl” réalisé par Anis Amrouche sur le film “Le château ambulant”</p>
     </section>
     <section>
-        <img src="" alt="">
-        <p></p>
+        <img src="/public/img/affiche-film-hunger-games-26772 1.webp" alt="">
+        <p>"Hope Games" réalisé par Noélie Talhouarn sur le film “Hunger Games”</p>
     </section>
     <section>
         <img src="" alt="">
