ajout section 5 page autres projets

--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -36,8 +36,8 @@
         <p>"Hope Games" réalisé par Noélie Talhouarn sur le film “Hunger Games”</p>
     </section>
     <section>
-        <img src="" alt="">
-        <p></p>
+        <img src="/public/img/Alien le 8eme passager 1.webp" alt="">
+        <p>"Alien from space" réalisé par Max Prin sur le film “Alien le 8eme passager”</p>
     </section>
     <section>
         <img src="" alt="">
