ajout section 6 page autres projets

--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -40,8 +40,8 @@
         <p>"Alien from space" réalisé par Max Prin sur le film “Alien le 8eme passager”</p>
     </section>
     <section>
-        <img src="" alt="">
-        <p></p>
+        <img src="/public/img/Fight Club 1.webp" alt="">
+        <p>"Insomnia" réalisé par Matys Ouvrard sur le film “Fight Club”</p>
     </section>
     <section>
         <img src="" alt="">
