ajout section 7 page autres projets

--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -44,8 +44,8 @@
         <p>"Insomnia" réalisé par Matys Ouvrard sur le film “Fight Club”</p>
     </section>
     <section>
-        <img src="" alt="">
-        <p></p>
+        <img src="/public/img/Scarface 1.webp" alt="">
+        <p>"ScarInfo" réalisé par Matthis Boreaniz sur le film "Scarface"</p>
     </section>
     <section>
         <img src="" alt="">
