ajout section 8 page autres projets

--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -48,8 +48,8 @@
         <p>"ScarInfo" réalisé par Matthis Boreaniz sur le film "Scarface"</p>
     </section>
     <section>
-        <img src="" alt="">
-        <p></p>
+        <img src="/public/img/Le seigneur des anneaux 1.webp" alt="">
+        <p>"La confrérie" réalisé par Kilian Breuil sur le film “Seigneur des Anneaux : Les Deux Tours”</p>
     </section>
     <section>
         <img src="" alt="">
