ajout section 9 page autres projets

--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -52,8 +52,8 @@
         <p>"La confrérie" réalisé par Kilian Breuil sur le film “Seigneur des Anneaux : Les Deux Tours”</p>
     </section>
     <section>
-        <img src="" alt="">
-        <p></p>
+        <img src="/public/img/Inception 1.webp" alt="">
+        <p>"Senseception" réalisé par Lola Roth sur le film “Inception”</p>
     </section>
     <section>
         <img src="" alt="">
