ajout section 10 page autres projets

--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -56,8 +56,8 @@
         <p>"Senseception" réalisé par Lola Roth sur le film “Inception”</p>
     </section>
     <section>
-        <img src="" alt="">
-        <p></p>
+        <img src="/public/img/Rush 1.webp" alt="">
+        <p>"Rush Racing Rivals" réalisé par Antoine Fabre sur le film “Rush”</p>
     </section>
     <section>
         <img src="" alt="">
