--- a/fr/page autres projets.html
+++ b/fr/page autres projets.html
@@ -60,8 +60,8 @@
         <p>"Rush Racing Rivals" réalisé par Antoine Fabre sur le film “Rush”</p>
     </section>
     <section>
-        <img src="" alt="">
-        <p></p>
+        <img src="/public/img/Paprika 1.webp" alt="">
+        <p>"Paprik-IA" réalisé par Ronan Lefour sur le film “Paprika”</p>
     </section>
 </body>
 </html>
