--- a/fr/page contact.html
+++ b/fr/page contact.html
@@ -17,5 +17,25 @@
         </h2>
         <img src="/public/icones/header/BytesizeMenu.svg" alt="">
     </header>
+    <section>
+        <section>
+            <h2>Formulaire</h2>
+          <form action="#">
+            <div>
+              <label for="first-name">First name</label>
+              <input type="text" name="first-name" id="first-name" />
+            </div>
+            <div>
+              <label for="last-name">Last name</label>
+              <input type="text" name="last-name" id="last-name" />
+            </div>
+            <div>
+              <label for="message">Message</label>
+              <textarea id="message" name="message" rows="5"></textarea>
+            </div>
+            <button type="submit">Send</button>
+          </form>
+      </section>
+    </section>
 </body>
 </html>
