--- a/fr/page contact.html
+++ b/fr/page contact.html
@@ -18,24 +18,32 @@
         <img src="/public/icones/header/BytesizeMenu.svg" alt="">
     </header>
     <section>
-        <section>
-            <h2>Formulaire</h2>
-          <form action="#">
-            <div>
-              <label for="first-name">First name</label>
-              <input type="text" name="first-name" id="first-name" />
-            </div>
-            <div>
-              <label for="last-name">Last name</label>
-              <input type="text" name="last-name" id="last-name" />
-            </div>
-            <div>
-              <label for="message">Message</label>
-              <textarea id="message" name="message" rows="5"></textarea>
-            </div>
-            <button type="submit">Send</button>
-          </form>
-      </section>
+        <h2>Formulaire</h2>
+      <form action="#">
+        <div>
+          <label for="first-name">First name</label>
+          <input type="text" name="first-name" id="first-name" />
+        </div>
+        <div>
+          <label for="last-name">Last name</label>
+          <input type="text" name="last-name" id="last-name" />
+        </div>
+        <div>
+          <label for="message">Message</label>
+          <textarea id="message" name="message" rows="5"></textarea>
+        </div>
+        <button type="submit">Send</button>
+      </form>
     </section>
+    <footer>
+        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="">
+        <h4>RÉSEAUX SOCIAUX</h4>
+        <img src="/public/icones/BxlInstagram (1).svg" alt="">
+        <img src="/public/icones/BxlFacebookCircle (1).svg" alt="">
+        <img src="/public/icones/icons8-twitterx (1).svg" alt=""> 
+        <img src="/public/icones/BxlSpotify.svg" alt="">
+        <hr>
+        <p>Ce projet est réalisé dans le cadre d’un exercice pédagogique au BUT MMI de Montbéliard</p>
+        <img src="/public/icones/logo MMI.svg" alt="">
 </body>
 </html>
