--- a/fr/index.html
+++ b/fr/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site">
         <h2>
             Avatar's Legacy
