ajout css logo header

--- a/fr/index.html
+++ b/fr/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site">
+        <img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site">
         <h2>
             Avatar's Legacy
         </h2>
