ajout css titre header + ajout fonts

--- a/fr/index.html
+++ b/fr/index.html
@@ -12,9 +12,9 @@
 <body>
     <header class="header">
         <img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site">
-        <h2>
+        <p class="titre-header">
             Avatar's Legacy
-        </h2>
+        </p>
         <img src="/public/icones/header/BytesizeMenu.svg" alt="">
     </header>
     <section>
