ajout css bouton menu

--- a/fr/index.html
+++ b/fr/index.html
@@ -15,7 +15,7 @@
         <p class="titre-header">
             Avatar's Legacy
         </p>
-        <img src="/public/icones/header/BytesizeMenu.svg" alt="">
+        <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
     </header>
     <section>
         <img src="/public/img/jake et neytiri proches.webp" alt="">-
