ajout header css sur toutes les pages

--- a/fr/page article 3.html
+++ b/fr/page article 3.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
 <body>
-    <header>
-        <img src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site">
-        <h2>
+    <header class="header">
+        <img class="logo-header" src="/public/icones/header/Logo site Avatar's Legacy 1.svg" alt="logo site">
+        <p class="titre-header">
             Avatar's Legacy
-        </h2>
-        <img src="/public/icones/header/BytesizeMenu.svg" alt="">
+        </p>
+        <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
     </header>
     <section>
         <h2>Un réalisateur visionnaire</h2>
