ajout css pour changer la dispositions des éléments de la page d'accueil

--- a/fr/index.html
+++ b/fr/index.html
@@ -17,12 +17,12 @@
         </p>
         <img class="menu-header" src="/public/icones/Menu burger.svg" alt="">
     </header>
-    <section>
+    <section class="section-1">
         <img src="/public/img/jake et neytiri proches.webp" alt="">-
-        <h1>AVATAR</h1>
-        <hr>
-        <cite>"Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</cite>
-        <img src="/public/icones/BytesizeChevronBottom.svg" alt="">
+        <p class="titre-1">AVATAR</p>
+        <hr class="ligne-1">
+        <cite class="citation">"Pourquoi, dès qu’un peuple est assis sur quelque chose que l’on convoite, ce peuple devient notre ennemi, justifiant ainsi le pillage.”</cite>
+        <img class="fleche" src="/public/icones/fleche.svg" alt="">
     </section>
     <section>
         <img src="/public/img/image article 1 page d'accueil.webp" alt="">
