--- a/fr/index.html
+++ b/fr/index.html
@@ -26,46 +26,46 @@
     </section>
     <section>
         <img src="/public/img/image article 1 page d'accueil.webp" alt="">
-        <h3>Une réplique marquante</h3>
+        <p class="titre-3">Une réplique marquante</p>
         <p>Plongez dans les profondeurs du film "Avatar" de James Cameron et explorez une réplique qui éveille les consciences, remettant en question l'avidité, l'impérialisme et notre relation avec la nature.</p>
-        <a href="/fr/page article 1.html">
-        <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        <a  href="/fr/page article 1.html">
+        <p class="btn-plus">Voir plus </p>
         </a>
         <hr>
     </section>
     <section>
         <img src="/public/img/image article 2 page d'accueil.webp" alt="">
-        <h3>Un film culte</h3>
+        <p class="titre-3">Un film culte</p>
         <p>Plongez dans l'univers extraordinaire de Pandora, explorez le conflit entre les humains et les Na'vi, et immergez-vous dans un message écologique puissant. Découvrez comment "Avatar" a redéfini le cinéma.</p>
         <a href="/fr/page article 2.html">
-        <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        <p>Voir plus </p>
         </a>
         <hr>
     </section>
     <section>
         <img src="/public/img/image article 3 page d'accueil.webp" alt="">
-        <h3>Un réalisateur visionnaire</h3>
+        <p class="titre-3">Un réalisateur visionnaire</p>
         <p>Découvrez le parcours exceptionnel de James Cameron, un maître de la science-fiction et un défenseur de l'exploration des fonds marins. Plongez dans l'impact révolutionnaire de "Avatar" sur l'industrie cinématographique.</p>
         <a href="/fr/page article 3.html">
-        <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        <p>Voir plus </p>
         </a>
         <hr>
     </section>
     <section>
         <img src="/public/img/image article 4 page d'accueil.webp" alt="">
-        <h3>Une bande son envoûtante</h3>
+        <p class="titre-3">Une bande son envoûtante</p>
         <p>Découvrez comment la bande-son de "Avatar" transporte les spectateurs dans un monde d'émotions intenses. Explorez le morceau magique "Devenir Un Avec 'Les Peuples' Devenir Un Avec Neytiri" de James Horner, qui est un voyage musical envoûtant dans l'univers de Pandora.</p>
         <a href="/fr/page article 4.html">
-        <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        <p>Voir plus </p>
         </a>
         <hr>
     </section>
     <section>
         <img src="/public/img/image article 5 page d'accueil.webp" alt="">
-        <h3>Un livre captivant</h3>
+        <p class="titre-3">Un livre captivant</p>
         <p>Découvrez comment "Avatar: Le Livre" vous transporte dans l'univers extraordinaire du film de James Cameron, offrant des détails fascinants sur l’univers d’Avatar et une opportunité de vivre cette aventure immersive d'une toute nouvelle manière.</p>
         <a href="/fr/page article 5.html">
-        <p>En savoir plus <img src="/public/icones/BytesizeArrowRight.svg" alt=""></p>
+        <p>Voir plus </p>
         </a>
     </section>
     <footer class="footer">
